--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
 # Librerie principali
-datapizzai==3.0.8
 python-dotenv==1.0.1
+requests  # Per le chiamate API a Google Speech-to-Text
 
-# Audio processing
-pyaudio==0.2.11
-wave
-soundfile==0.12.1
-
-# GUI (GTK)
-PyGObject==3.46.0
-pycairo==1.25.1
-
-# Utilities
-numpy==2.3.2
-asyncio
-threading
+# Librerie standard Python (già incluse)
+# wave, asyncio, threading, tkinter, json, pathlib
